<resources>
    <string name="app_name">Moscow Clubs</string>
    <string name="msk_clubs">Moscow Clubs</string>
    <string name="profile_string">Профиль</string>
    <string name="map_string">Карта</string>
    <string name="clubs_string">Клубы</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_string">Привет! С возвращением!</string>
    <string name="log_in_string">Войдите, чтобы продолжить</string>
    <string name="email_string">Email</string>
    <string name="password_string">Пароль</string>
    <string name="forget_pass_string">Забыли пароль?</string>
    <string name="enter_in_string">Войти</string>
    <string name="no_account_string">Нет аккаунта? Зарегистрируйтесь!</string>
    <string name="sing_in_string">Зарегистрируйтесь, чтобы продолжить</string>
    <string name="confirm_password_string">Подтвердите пароль</string>
    <string name="name_string">Имя</string>
    <string name="registration_string">Зарегистрироваться</string>
    <string name="hello_string">Привет!</string>
    <string name="already_have_an_account_string">Уже есть аккаунт? Войдите</string>
    <string name="address_text_string">Адрес</string>
    <string name="closest_underground_string">Ближайшее метро</string>
    <string name="site_string">Сайт</string>
    <string name="phone_number_string">Телефон</string>
    <string name="work_time_string">Время работы</string>
    <string name="median_price_string">Средний чек</string>
    <string name="people_amount_string">Вместимость</string>
    <string name="add_your_comment_string">Зарегистрируйся и добавь свой комментарий об этом месте</string>
    <string name="exit_text">Выйти</string>
    <string name="my_comments_text">Мои комментарии</string>
    <string name="favourite_clubs_text">Избранные клубы</string>
    <string name="add_your_comment_text">Оставь свой комментарий</string>
</resources>