<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#25DCDCDC"
    tools:context=".view.clubs.clubinfo.ClubMainInformationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_on_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/light_white"
        android:text="Показать на карте"
        android:textSize="8sp"
        app:cornerRadius="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/address_text_string"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/club_address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Улица такая" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/closest_underground_string"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/closest_underground"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="м. Кропоткинская" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="185dp"
                android:layout_height="50dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/site_string"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/web_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="https:://bargipsy.com"
                        android:textColor="#3F51B5" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <androidx.cardview.widget.CardView
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/phone_number_string"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="+7-963-650-76-15"
                        android:textColor="#3F51B5" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_time_string"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/work_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="пн-пт: 23:00 - 06:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/median_price_string"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/median_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="1500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people_amount_string"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/people_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="1200" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>